Fix dark mode text colors

--- a/bot/admin/web/src/app/language-understanding/entities/entities.component.scss
+++ b/bot/admin/web/src/app/language-understanding/entities/entities.component.scss
@@ -21,6 +21,7 @@
   margin-right: 5px;
   margin-bottom: 5px;
   border-radius: 10rem;
+  color: var(--button-filled-basic-text-color);
   background-color: var(--button-filled-basic-background-color);
   font-size: 0.9rem;
   line-height: 1.25rem;
