--- a/bot/admin/web/src/app/theme/styles/styles.scss
+++ b/bot/admin/web/src/app/theme/styles/styles.scss
@@ -31,6 +31,7 @@ $yellow: #ffaa00;
 $red: #ff3d71;
 
 $grid-gutter-width: 15px;
+$table-color: inherit;
 
 @import 'bootstrap/scss/variables';
 @import 'bootstrap/scss/mixins';
